--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <input type="date" required class="js-input-date date-input" onkeydown="handleCostKeydown(event);">
         
       </div>
-      <button onclick="addTodo();" class="add-todo-button">Add</button>
+      <button class="add-todo-button js-add-todo-button">Add</button>
     </div>
 
     <div class="js-todo-list todo-grid"></div>
